--- a/templates/admin/subirContenido.html
+++ b/templates/admin/subirContenido.html
@@ -13,6 +13,9 @@
   <link rel="stylesheet" href="../../static/CSS/instructor/subirContenido.css"/>
 </head>
 <body>
+       <button class="mobile-menu-btn" id="mobileMenuBtn">
+        <i class="fas fa-bars"></i>
+    </button>
   <div class="layout">
     <!-- ========== SIDEBAR ========== -->
     <aside class="sidebar" id="sidebar">
