--- a/templates/estudiante/clases.html
+++ b/templates/estudiante/clases.html
@@ -18,6 +18,10 @@
     <div class="particle"></div>
   </div>
 
+      <button class="mobile-menu-btn" id="mobileMenuBtn">
+        <i class="fas fa-bars"></i>
+    </button>
+
   <div class="layout">
     
     <!-- ========== SIDEBAR - BARRA LATERAL ========== -->
