--- a/templates/estudiante/diplomados.html
+++ b/templates/estudiante/diplomados.html
@@ -9,6 +9,10 @@
     <link rel="icon" type="image/png" href="../../static/img/logof.png"/>
 </head>
 <body>
+
+        <button class="mobile-menu-btn" id="mobileMenuBtn">
+        <i class="fas fa-bars"></i>
+    </button>
     <div class="layout">
         <!-- ========== SIDEBAR ========== -->
         <aside class="sidebar" id="sidebar">
