--- a/templates/estudiante/modulos.html
+++ b/templates/estudiante/modulos.html
@@ -10,11 +10,16 @@
   <script src="https://js.braintreegateway.com/web/dropin/1.43.0/js/dropin.min.js"></script>
 </head>
 <body>
+
+    <button id="toggleSidebarTop"  class="mobile-menu-btn">
+        <i class="fas fa-bars"></i>
+    </button>
+
   <div class="layout">
     
     <!-- ========== SIDEBAR ========== -->
     <aside class="sidebar" id="sidebar">
-      <button id="toggleSidebar" class="toggle-btn">☰</button>
+     
 
       <div class="logo">
         <div class="logo-content">
@@ -60,7 +65,7 @@
     <main class="main">
       <!-- TOPBAR -->
       <div class="topbar">
-        <button id="toggleSidebarTop" class="toggle-btn">☰</button>
+      
                 
         <div class="search-container">
           <i class="fas fa-search search-icon"></i>
