--- a/templates/instructor/home.html
+++ b/templates/instructor/home.html
@@ -90,7 +90,7 @@
               </div>
               <div class="dropdown-divider"></div>
               <div class="dropdown-content">
-                <a href="{{ url_for('perfilEstudiante') }}" class="dropdown-item">
+                <a href="{{ url_for('perfiles.perfil_instructor') }}" class="dropdown-item">
                   <i class="fas fa-user"></i>
                   <span>Mi Perfil</span>
                 </a>
