--- a/templates/admin/gestionUsuarios.html
+++ b/templates/admin/gestionUsuarios.html
@@ -9,9 +9,11 @@
   <link rel="stylesheet" href="../../static/CSS/admin/gestionUsuarios.css">
 </head>
 <body>
-      <button class="mobile-menu-btn" id="mobileMenuBtn">
+  
+    <button class="mobile-menu-btn" id="mobileMenuBtn">
         <i class="fas fa-bars"></i>
     </button>
+
   <div class="layout">
 
     <!-- ========== SIDEBAR ========== -->
@@ -20,8 +22,8 @@
         <div class="logo-content">
           <img src="../../static/img/logo.png" alt="Logo">
           <h2>tech-script</h2>
+          
         </div>
-        <button id="toggleSidebar" class="toggle-btn">☰</button>
       </div>
 
       <nav>
@@ -54,7 +56,7 @@
     <!-- ========== MAIN CONTENT ========== -->
     <main class="main">
       <div class="topbar">
-        <button id="toggleSidebarMobile" class="toggle-btn">☰</button>
+        
         <div class="search-container">
           <i class="fas fa-search search-icon"></i>
           <input type="text" placeholder="Buscar diplomados, contenido...">
@@ -275,6 +277,6 @@
     </div>
   </div>
 </div>
-
+ <script src="../../static/JS/admin/gestionUsuarios.js"></script>
 </body>
 </html>
